# svg2geojson

./: .gitignore  README.md  geojson2svg1.0_Lembaran_Bayan.py  main.py  pyproject.toml
plan/: inc13_decisions.md  increments.md  svg_exterior_filter.md
shrinked/: svg2geojson.py
shrinked/transforms/: Arı6_1Kat_parça1_layered.json
src/: classifier.py  cleaning.py  config.py  door_absorber.py  door_closer.py  georeferencer.py  hatching_filter.py  models.py  polygonizer.py  separator.py  svg_parser.py  svg_writer.py  visualizer.py
tests/: _diag_ari8.py  inc10_checkpoint.py  inc13_checkpoint.py  inc13_working_checkpoint.py  inc14_checkpoint.py  inc15_checkpoint.py  inc5_checkpoint.py  inc5_v2_checkpoint.py  inc5_v3_checkpoint.py  inc678_checkpoint.py  inc9_checkpoint.py  inc9_inc5v3_checkpoint.py  pipeline_overview_checkpoint.py
