[project]
name = "svg2geojson"
version = "0.1.0"
description = "Convert CAD floorplan SVGs to GeoJSON room polygons"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "shapely>=2.0",
    "geopandas>=0.14",
    "scipy>=1.11",
    "numpy>=1.24",
    "pyproj>=3.6",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
]
